--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,9 @@
 	src: url('./assets/font/CentraNo2-Book.ttf');
 	font-weight: 400;
 }
-
+.banner a {
+  text-decoration: none;
+}
 /************ Default Css ************/
 * {
   margin: 0;
